# p-IgGen

./: .gitignore  LICENSE  README.md  pyproject.toml
piggen/: cli.py  model.py  utils.py
src/piggen/: cli.py  model.py  utils.py
