[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p-IgGen"
version = "1.0.0"
description = "A generative paired antibody language model."
authors = [
    { name = "Oliver Turnbull", email = "oturnbull1@gmail.com" }
]
readme = "README.md"
dependencies = [
    "transformers",
    "torch",
    "click"
]
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/olivert1/p-iggen"
"Repository" = "https://github.com/olivert1/p-iggen"

[project.scripts]
piggen_generate = "piggen.cli:generate"
piggen_likelihood = "piggen.cli:likelihood"

[tool.ruff]
src = ["src", "tests"]
line-length = 150
lint.select = [
  "B",   # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "BLE", # flake8-blind-except - https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
  "C4",  # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
  "S",   # flake8-bandit - https://docs.astral.sh/ruff/rules/#flake8-bandit-s
  "E",   # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
  "F",   # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
  "W",   # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
  "FA",  # flake8-future-annotations - https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
  "TID", # flake8-tidy-imports - https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
  "I",   # isort - https://docs.astral.sh/ruff/rules/#isort-i
  "UP",  # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # Allow assert statements in test files